<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.space.quizapp.ui.start.StartFragment">

    <com.space.quizapp.ui.custom.StartIllustrationBackground
        android:id="@+id/illustration_bkg_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/start_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:gravity="center"
        android:text="@string/my_first_quiz"
        android:textColor="@color/neutral_04_white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/illustration_image" />

    <ImageView
        android:id="@+id/illustration_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:src="@drawable/ic_start_illustration"
        app:layout_constraintBottom_toBottomOf="@id/illustration_bkg_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="55dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/shape_input_background"
        android:gravity="center"
        android:hint="@string/input_your_name"
        android:padding="19dp"
        android:textSize="12sp"
        app:boxStrokeColor="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/illustration_bkg_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="117dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_input_background"
        android:backgroundTint="@color/yellow_primary"
        android:text="@string/start_quiz"
        android:textColor="@color/neutral_04_white"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/name_editText" />


</androidx.constraintlayout.widget.ConstraintLayout>